Fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -133,6 +133,7 @@ body {
 
 .listdiv {
     float: right;
+    display: flex;
 }
 
 #searchList li {
@@ -144,7 +145,9 @@ body {
     text-decoration: none;
     font-size: 16px;
     color: var(--light-letters);
-    display: block;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 74% 26%;
     cursor: pointer;
 }
 
